Updated sourcecode structure, added crispy form to edit_booking.html

--- a/reservation/templates/edit_booking.html
+++ b/reservation/templates/edit_booking.html
@@ -3,6 +3,7 @@
 {% block head %}
 {% endblock %}
 {% block body %}
+{% load crispy_forms_tags %}
 <section class="v-100">
   <div class="container-fluid h-custom">
     <div class="row d-flex justify-content-center align-items-center h-100">
@@ -13,17 +14,14 @@
       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
         <form method="post">
           {% csrf_token %}
-          {% if messages %}
-          <ul class="messages">
-            {% for message in messages %}
-            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
-            {% endfor %}
-          </ul>
-          {% endif %}
-          <span class="h1 fw-bold mb-0">Edit Booking</span>
+          <span class="h1 fw-bold mb-0">
+            Edit Booking
+          </span>
           <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Update your reservation</h5>
-          {{ form.as_p }}
-          <button class="btn btn-primary" type="submit">Update Reservation</button>
+          {{ form | crispy }}
+          <button class="btn btn-primary" type="submit">
+            Update Reservation
+          </button>
         </form>
       </div>
     </div>
