--- a/menu/templates/menu.html
+++ b/menu/templates/menu.html
@@ -3,7 +3,10 @@
 {% block head %}
 {% endblock %}
 {% block body %}
+<br><br>
+<div class="col">
 <h1 class="text-center"> Please, choose the menu from fellowing bellow: </h1>
+</div>
 <br><br><br>
 <div class="accordion accordion-flush" id="accordionFlushExample">
     <div class="row row-cols-1 row-cols-md-3 g-4">
