removed title at signup.html, replaced button with a element to sign in at signup.html

--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,16 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
-
 {% block head %}
-<title>Log in </title>
 {% endblock %}
-
-
-
-
 {% load i18n %}
 {% load account socialaccount %}
-
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 {% block body %}
 <section class="v-100">
@@ -21,26 +14,21 @@
           class="img-fluid" alt="Sample image">
       </div>
       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-0">
-  
         <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-<h1 class="fw-bold mb-2 text-uppercase">{% trans "Sign Up" %}</h1>
-<div class="d-flex align-items-center justify-content-center pb-4">
-  <p class="mb-0 me-2">Already have an account? Please </p>
-  <button type="button" class="btn btn-outline-danger"><a href="{{ login_url }}" class="text-white-50 fw-bold"> Sign In</a></button>
-
-</div>
-
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit" class="btn btn-primary">{% trans "Sign Up" %} &raquo;</button>
-
-</form>
+          <h1 class="fw-bold mb-2 text-uppercase">{% trans "Sign Up" %}</h1>
+          <div class="d-flex align-items-center justify-content-center pb-4">
+            <p class="mb-0 me-2">Already have an account? Please </p>
+            <a href="{{ login_url }}" class="btn btn-outline-danger text-white-50 fw-bold"> Sign In </a>
+          </div>
+          {% csrf_token %}
+          {{ form.as_p }}
+          {% if redirect_field_value %}
+          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
+          {% endif %}
+          <button type="submit" class="btn btn-primary">{% trans "Sign Up" %} &raquo;</button>
+        </form>
       </div>
     </div>
   </div>
 </section>
-
 {% endblock %}
