--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -6,6 +6,7 @@
 {% load account socialaccount %}
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 {% block body %}
+{% load crispy_forms_tags %}
 <section class="v-100">
   <div class="container-fluid h-custom">
     <div class="row d-flex justify-content-center align-items-center h-100">
@@ -15,13 +16,13 @@
       </div>
       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-0">
         <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-          <h1 class="fw-bold mb-2 text-uppercase">{% trans "Sign Up" %}</h1>
+          <h2 class="fw-bold mb-2 text-uppercase">{% trans "Sign Up" %}</h2>
           <div class="d-flex align-items-center justify-content-center pb-4">
             <p class="mb-0 me-2">Already have an account? Please </p>
             <a href="{{ login_url }}" class="btn btn-outline-danger text-white-50 fw-bold"> Sign In </a>
           </div>
           {% csrf_token %}
-          {{ form.as_p }}
+          {{ form | crispy }}
           {% if redirect_field_value %}
           <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
           {% endif %}
