--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -7,27 +7,29 @@
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 {% block body %}
 {% load crispy_forms_tags %}
-<section class="v-100">
-  <div class="container-fluid h-custom">
-    <div class="row d-flex justify-content-center align-items-center h-100">
-      <div class="col-md-9 col-lg-6 col-xl-5">
-        <img src="https://img.freepik.com/free-vector/resume-concept-illustration_114360-103.jpg?w=826&t=st=1684359273~exp=1684359873~hmac=2d7db2f3cac7e4b0a51dddb586dd2965ac3db584c6b57c80a52b643c578a8e3d"
-          class="img-fluid" alt="Sample image">
+<section class="text-center text-lg-start">
+  <div class="container py-4">
+    <div class="row g-0 align-items-center">
+      <div class="col-lg-6 mb-5 mb-lg-0"> 
+        <img src="https://img.freepik.com/free-vector/professional-chefs-cooking-culinary-chefs-hand-drawn-sketch-vector-illustration_460848-14929.jpg?w=740&t=st=1689230123~exp=1689230723~hmac=cecebba9b7cbb42f562720e9fdca7b1452e51e9806af329ab5a9b0f92f45efb4"
+            class="w-100 h-100 rounded-4 shadow-4" alt="a cook">
       </div>
-      <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-0">
-        <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-          <h2 class="fw-bold mb-2 text-uppercase">{% trans "Sign Up" %}</h2>
-          <div class="d-flex align-items-center justify-content-center pb-4">
-            <p class="mb-0 me-2">Already have an account? Please </p>
-            <a href="{{ login_url }}" class="btn btn-outline-danger text-white-50 fw-bold"> Sign In </a>
-          </div>
-          {% csrf_token %}
-          {{ form | crispy }}
-          {% if redirect_field_value %}
-          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
-          {% endif %}
-          <button type="submit" class="btn btn-primary">{% trans "Sign Up" %} &raquo;</button>
-        </form>
+      <div class="col-lg-6 mb-5 mb-lg-0">
+        <div class="card cascading-right"> 
+          <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+            <h2 class="fw-bold mb-2 text-uppercase">{% trans "Sign Up" %}</h2>
+            <div class="d-flex align-items-center justify-content-center pb-4">
+              <p class="mb-0 me-2">Already have an account? Please </p>
+              <a href="{{ login_url }}" class="btn btn-outline-danger text-white-50 fw-bold"> Sign In </a>
+            </div>
+            {% csrf_token %}
+            {{ form | crispy }}
+            {% if redirect_field_value %}
+            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
+            {% endif %}
+            <button type="submit" class="btn btn-primary">{% trans "Sign Up" %} &raquo;</button>
+          </form>
+        </div>
       </div>
     </div>
   </div>
