Updated images to result for meal html on TESTING.md

--- a/menu/templates/meal.html
+++ b/menu/templates/meal.html
@@ -9,7 +9,7 @@
       <div class="row d-flex justify-content-center align-items-center h-100">
         <div class="col-md-9 col-lg-6 col-xl-5">
           <img src="{{ menu.featured_image.url }}" style="border-radius: 3em;"
-            class="img-fluid" alt="Featured Image">
+            class="img-fluid" alt="{{ menu.title }}">
         </div>
       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1 text-black">
         <div>
