Added content to allt element on online_booking.html

--- a/reservation/templates/online_booking.html
+++ b/reservation/templates/online_booking.html
@@ -9,7 +9,7 @@
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-md-9 col-lg-6 col-xl-5">
         <img src="https://img.freepik.com/free-vector/waiters-concept-illustration_114360-2908.jpg?w=1060&t=st=1684266496~exp=1684267096~hmac=5f7ce09bf9265ee365e209700bfa6258f97461744c5fa1aec14eab988542d737"
-          class="img-fluid" alt="Sample image">
+          class="img-fluid" alt="waiter and waitress">
       </div>
       <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
         <form method="post" action="{% url 'online_booking' %}">
