--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -18,17 +18,17 @@
         <div class="card cascading-right">     
           <form class="login" method="POST" action="{% url 'account_login' %}">
             <h2 class="fw-bold mb-2 text-uppercase">{% trans "Sign In" %}</h2>
-            <p class="text-white-50 mb-5">Please login to your account</p>
+            <p class="text-black-50 mb-5">Please login to your account</p>
+            <div class="d-flex pb-4">
+              <p class="mb-0 me-2">Don't have an account?</p>
+              <a href="{% url 'account_signup' %}" class="btn btn-outline-danger text-white-50 fw-bold">Create new</a>
+            </div>
             {% csrf_token %}
             {{ form | crispy }}
             {% if redirect_field_value %}
             <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}">
             {% endif %}
             <button class="btn btn-primary" type="submit">{% trans "Sign In" %}</button>
-            <div class="d-flex align-items-center justify-content-center pb-4">
-              <p class="mb-0 me-2">Don't have an account?</p>
-              <a href="{% url 'account_signup' %}" class="btn btn-outline-danger text-white-50 fw-bold">Create new</a>
-            </div>
           </form>
         </div>
       </div>
