Added alt content to signup.html

--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -12,7 +12,7 @@
     <div class="row g-0 align-items-center">
       <div class="col-lg-6 mb-5 mb-lg-0"> 
         <img src="https://img.freepik.com/free-vector/resume-concept-illustration_114360-103.jpg?w=826&t=st=1684359273~exp=1684359873~hmac=2d7db2f3cac7e4b0a51dddb586dd2965ac3db584c6b57c80a52b643c578a8e3d"
-            class="w-100 h-100 rounded-4 shadow-4" alt="a cook">
+            class="w-100 h-100 rounded-4 shadow-4" alt="person with profile photo">
       </div>
       <div class="col-lg-6 mb-5 mb-lg-0">
         <div class="card cascading-right"> 
